--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,9 @@ dependencies:
   equatable: ^2.0.3
   freezed: ^1.1.1
   get_storage: ^2.0.2
-  hive: ^2.0.4
-  hive_flutter: ^1.1.0
-  hive_generator: ^1.1.0
+  #hive: ^2.0.4
+  #hive_flutter: ^1.1.0
+  #hive_generator: ^1.1.0
   json_annotation: ^4.0.1
   json_serializable: ^6.1.4
   logger: any
@@ -31,8 +31,10 @@ dependencies:
   image_picker: ^0.8.3+2
   modal_bottom_sheet: ^2.0.0
   permission_handler: ^8.3.0
-  flutter_secure_storage: ^5.0.2
-  shared_preferences: ^2.0.7
+  #flutter_secure_storage: ^5.0.2
+  #shared_preferences: ^2.0.7
+  flutter_native_splash: ^2.2.8
+  device_preview: 
   flutter: 
     sdk: flutter
 
