--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,3 @@
-# Don't forget to execute this : flutter pub run build_runner build --delete-conflicting-outputs
-
 name: unsikuy_app
 version: 1.0.0+1
 publish_to: none
@@ -15,48 +13,44 @@ dependencies:
   equatable: ^2.0.3
   freezed: ^1.1.1
   get_storage: ^2.0.2
-  #hive: ^2.0.4
-  #hive_flutter: ^1.1.0
-  #hive_generator: ^1.1.0
   json_annotation: ^4.0.1
   json_serializable: ^6.1.4
   logger: any
   path_provider: ^2.0.2
   pull_to_refresh: ^2.0.0
-  # retrofit: any
-  # retrofit_generator: any
   shimmer: ^2.0.0
   sizer: ^2.0.13
   flutter_form_builder: ^7.0.0
   image_picker: ^0.8.3+2
   modal_bottom_sheet: ^2.0.0
   permission_handler: ^8.3.0
-  #flutter_secure_storage: ^5.0.2
-  #shared_preferences: ^2.0.7
   flutter_native_splash: ^2.2.8
-  device_preview: 
+  device_preview: any
   form_builder_validators: ^8.3.0
+  cloud_firestore: 4.3.0
+  firebase_core: 2.4.0
+  firebase_auth: 4.2.3
+  firebase_storage: 11.0.9
+  uuid: 3.0.7
   flutter: 
     sdk: flutter
 
 dev_dependencies: 
   flutter_lints: 2.0.1
+  build_runner: any
+  flutter_gen_runner: any
+  flutter_launcher_icons: ^0.11.0
   flutter_test: 
     sdk: flutter
-  build_runner: any
-  flutter_gen_runner: null
-  flutter_launcher_icons: ^0.11.0
 
 flutter: 
-  uses-material-design: true
-
-  assets:
+  assets: 
     - lib/app/resources/images/
-
-  fonts:
+  fonts: 
     - family: Lato
-      fonts:
+      fonts: 
         - asset: assets/fonts/Lato-Regular.ttf
         - asset: assets/fonts/Lato-Light.ttf
         - asset: assets/fonts/Lato-Bold.ttf
+  uses-material-design: true
 
