--- a/native_splash.yaml
+++ b/native_splash.yaml
@@ -14,15 +14,15 @@ flutter_native_splash:
   # of your splash screen to a solid color.  Use background_image to set the background of your
   # splash screen to a png image.  This is useful for gradients. The image will be stretch to the
   # size of the app. Only one parameter can be used, color and background_image cannot both be set.
-  #color: "#ffffff"
-  background_image: "lib/app/resources/images/img_splashbg.png"
+  color: "#ffffff"
+  #background_image: "lib/app/resources/images/img_splashbg.png"
 
   # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
   # the leading # character.
 
   # The image parameter allows you to specify an image used in the splash screen.  It must be a
   # png file and should be sized for 4x pixel density.
-  image: "lib/app/resources/images/img_logo.png"
+  image: "lib/app/resources/images/unsika_connect.png"
 
   # The branding property allows you to specify an image used as branding in the splash screen.
   # It must be a png file. Currently, it is only supported for Android < v12 and iOS.
