--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   emoji_picker_flutter: 1.5.2
   flutter_linkify: ^5.0.2
   url_launcher: 6.1.7
+  firebase_messaging: any
   flutter: 
     sdk: flutter
 
