fixing pagination, notif, create tnc

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </intent>
     </queries>
    <application
-        android:label="unsikuy_app"
+        android:label="Unsika Connect"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
