--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,8 @@ dependencies:
   flutter_native_splash: ^2.2.8
   device_preview: any
   form_builder_validators: ^8.3.0
-  cloud_firestore: 4.3.0
-  firebase_core: 2.4.0
+  cloud_firestore: 4.4.0
+  firebase_core: 2.8.0
   firebase_auth: 4.2.3
   firebase_storage: 11.0.9
   uuid: 3.0.7
@@ -50,7 +50,8 @@ dependencies:
   font_awesome_flutter: 10.3.0
   eva_icons_flutter: 3.1.0
   firebase_analytics: any
-  firebase_core_web: 2.1.0
+  firebase_core_web: 2.2.2
+  firebase_auth_web: 5.2.10
   flutter_email_sender: 5.2.0
   chips_choice: any
   mailer: 6.0.0
