--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: unsikuy_app
-version: 1.0.2
+version: 2.0.0
 publish_to: none
 description: A new Flutter project.
 environment: 
@@ -58,6 +58,7 @@ dependencies:
   like_button: 2.0.5
   cached_network_image: any
   flutterfire_ui: 0.4.3+20
+  change_app_package_name:
   flutter: 
     sdk: flutter
 
